--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -18,6 +18,7 @@
                 <tree>
                     <field name="name"/>
                     <field name="description"/>
+                    <field name="responsible_id"/>
                 </tree>
             </field>
         </record>
@@ -42,10 +43,19 @@
                         <group>
                             <field name="name"/>
                             <field name="description"/>
+                            <field name="responsible_id"/>
                         </group>
                         <notebook>
                             <page string="Description">
                                 <field name="description"/>
+                            </page>
+                            <page string="Sessions">
+                                <field name="session_ids">
+                                    <tree string="Registered sessions">
+                                        <field name="name"/>
+                                        <field name="instructor_id"/>
+                                    </tree>
+                                </field>
                             </page>
                             <page string="About">
                                 This is an example of notebooks
@@ -65,5 +75,50 @@
         <menuitem id="courses_menu" name="Courses" parent="openacademy_menu"
         groups="group_openacademy_manager"
                   action="course_list_action"/>
-      
+
+
+        <record model="ir.actions.act_window" id="session_list_action">
+            <field name="name">Sessions</field>
+            <field name="res_model">openacademy.session</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <record model="ir.ui.view" id="session_form_view">
+            <field name="name">session.form</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <form string="Session Form">
+                    <sheet>
+                        <group>
+                            <group string="General">
+                                <field name="course_id"/>
+                                <field name="name"/>
+                                <field name="instructor_id"/>
+                            </group>
+                            <group string="Schedule">
+                                <field name="start_date"/>
+                                <field name="duration"/>
+                                <field name="seats"/>
+                            </group>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="session_tree_view">
+            <field name="name">session.tree</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <tree string="Session Tree">
+                    <field name="name"/>
+                    <field name="course_id"/>
+                </tree>
+            </field>
+        </record>
+
+        <menuitem id="session_menu" name="Sessions"
+                parent="openacademy_menu"
+                groups="group_openacademy_manager"
+                action="session_list_action"/>
 </odoo>
